# OpenClaudia

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_FEATURES.md  Cargo.toml
.chainlink/: issues.db  session.json
.openclaudia/: config.yaml
.openclaudia/hooks/: session-start.py
.openclaudia/rules/: global.md
src/: compaction.rs  config.rs  context.rs  hooks.rs  lib.rs  main.rs  mcp.rs  memory.rs  plugins.rs  prompt.rs  providers.rs  proxy.rs  rules.rs  session.rs  subagent.rs  tool_intercept.rs  tools.rs  tui.rs  web.rs
tests/: integration_tests.rs
